// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoodMeting with results should show the correct detailpage for status afgehandeld 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/bodem"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Bodem
        </a>
        <h2
          class="Heading Heading__large"
        >
          Lood in bodem-check
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          AV-001444
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Schipluidenlaan 16A, Amsterdam
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Document
        </h3>
        <div
          class="Value"
        >
          <span
            class="DocumentLinkWrap"
          >
            <span
              class="DownloadIcon"
            >
              <svg
                aria-hidden="true"
                height="14"
                width="14"
              >
                Download.svg
              </svg>
            </span>
            <a
              class="Button Button__plain Button__lean Linkd DocumentLink"
              href="http://localhost:5000/api/v1/services/lood/87464b90-176f-ed11-9561-0022489fdff7/attachments"
              rel="external noopener noreferrer"
            >
              Rapport Lood in de bodem-check
            </a>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StatusLine LoodStatusLines"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                28 november 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                28 november 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end-active ConnectLine--end-checked"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
              <time
                class="StatusDate"
              >
                28 november 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`LoodMeting with results should show the correct detailpage for status afgewezen 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/bodem"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Bodem
        </a>
        <h2
          class="Heading Heading__large"
        >
          Lood in bodem-check
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          AV-001446
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Schipluidenlaan 16A, Amsterdam
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
    </div>
    <div
      class="StatusLine LoodStatusLines"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                29 november 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                29 november 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end-active ConnectLine--end-checked"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgewezen
              </strong>
              <time
                class="StatusDate"
              >
                15 december 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`LoodMeting with results should show the correct detailpage for status in behandeling 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/bodem"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Bodem
        </a>
        <h2
          class="Heading Heading__large"
        >
          Lood in bodem-check
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Kenmerk
        </h3>
        <p
          class="Value"
        >
          AV-001447
        </p>
      </div>
      <div
        class="InfoDetail LocationInfo"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Locatie
        </h3>
        <p
          class="Value"
        >
          Schipluidenlaan 12A, Amsterdam
          <button
            class="Button Button__inline Button__lean MapLink"
          >
            Bekijk op de kaart
          </button>
        </p>
      </div>
    </div>
    <div
      class="StatusLine LoodStatusLines"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                01 december 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`LoodMeting without results should show the correct detailpage 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/bodem"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Bodem
        </a>
        <h2
          class="Heading Heading__large"
        >
          Lood in bodem-check
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="Alert warning"
      >
        <svg
          aria-hidden="true"
          class="Icon"
        >
          Alert.svg
        </svg>
         
        <p>
          We kunnen op dit moment geen gegevens tonen.
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
